Add fiat channel feature and stub buttons in GUI

--- a/app/src/main/res/layout/activity_remote_peer.xml
+++ b/app/src/main/res/layout/activity_remote_peer.xml
@@ -29,21 +29,50 @@
         <!-- Features and actions -->
 
         <org.apmem.tools.layouts.FlowLayout
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="25dp"
             android:id="@+id/featuresList"
             style="@style/BoundedView"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="5dp"
             android:visibility="gone"
             f:layout_newLine="true">
 
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/ChannelRangeQueriesExtended"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/OptionDataLossProtect"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/BasicMultiPartPayment"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/PrivateRouting"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/StaticRemoteKey"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/HostedChannels"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/ChainSwap"/>
-            <TextView style="@style/ChipTextGrayMargin" android:id="@+id/Wumbo"/>
+            <TextView
+                android:id="@+id/ChannelRangeQueriesExtended"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/OptionDataLossProtect"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/BasicMultiPartPayment"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/PrivateRouting"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/StaticRemoteKey"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/HostedChannels"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/FiatHostedChannels"
+                style="@style/ChipTextGrayMargin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/ChainSwap"
+                style="@style/ChipTextGrayMargin" />
+
+            <TextView
+                android:id="@+id/Wumbo"
+                style="@style/ChipTextGrayMargin" />
         </org.apmem.tools.layouts.FlowLayout>
 
         <TextView
@@ -82,7 +111,16 @@
                 android:id="@+id/optionHostedChannel"
                 android:layout_marginTop="@dimen/large_button_margin"
                 android:onClick="requestHostedChannel"
-                style="@style/GrayButton"/>
+                style="@style/GrayButton">
+
+            </com.ornach.nobobutton.NoboButton>
+
+            <com.ornach.nobobutton.NoboButton
+                android:id="@+id/optionFiatHostedChannel"
+                style="@style/GrayButton"
+                android:layout_marginTop="@dimen/small_button_margin"
+                android:onClick="requestFiatHostedChannel"
+                app:nb_text="@string/rpa_request_fiat_hc" />
 
         </LinearLayout>
     </LinearLayout>
