--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="corner_radius">3dp</dimen>
     <dimen name="large_button_margin">45dp</dimen>
+    <dimen name="small_button_margin">15dp</dimen>
     <dimen name="header_size">22sp</dimen>
     <dimen name="qr_size">120sp</dimen>
 
