Remove bottom navigation

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,47 +20,7 @@
     <dimen name="simpletooltip_overlay_offset">16dp</dimen>
     <dimen name="simpletooltip_animation_padding">4dp</dimen>
 
-    <!-- bottom navigation -->
-
-    <dimen name="bottom_navigation_elevation">8dp</dimen>
-    <dimen name="bottom_navigation_min_width">104dp</dimen>
-    <dimen name="bottom_navigation_max_width">168dp</dimen>
-    <dimen name="bottom_navigation_height">56dp</dimen>
-    <dimen name="bottom_navigation_icon">24dp</dimen>
-    <dimen name="bottom_navigation_margin_top_active">6dp</dimen>
-    <dimen name="bottom_navigation_margin_top_inactive">8dp</dimen>
-    <dimen name="bottom_navigation_margin_bottom">7dp</dimen>
-    <dimen name="bottom_navigation_padding_left">12dp</dimen>
-    <dimen name="bottom_navigation_padding_right">12dp</dimen>
-    <dimen name="bottom_navigation_text_size_active">14sp</dimen>
-    <dimen name="bottom_navigation_text_size_inactive">12sp</dimen>
-    <dimen name="bottom_navigation_text_size_forced_active">11sp</dimen>
-    <dimen name="bottom_navigation_text_size_forced_inactive">10sp</dimen>
-
-    <!-- bottom navigation Small -->
-
-    <dimen name="bottom_navigation_small_active_min_width">96dp</dimen>
-    <dimen name="bottom_navigation_small_active_max_width">168dp</dimen>
-    <dimen name="bottom_navigation_small_inactive_min_width">64dp</dimen>
-    <dimen name="bottom_navigation_small_inactive_max_width">96dp</dimen>
-    <dimen name="bottom_navigation_small_margin_top_active">6dp</dimen>
-    <dimen name="bottom_navigation_small_margin_top">16dp</dimen>
-    <dimen name="bottom_navigation_small_margin_bottom">16dp</dimen>
-    <dimen name="bottom_navigation_small_selected_width_difference">10dp</dimen>
-
-    <!-- bottom navigation Notifications -->
-
-    <dimen name="bottom_navigation_notification_width">8dp</dimen>
-    <dimen name="bottom_navigation_notification_height">8dp</dimen>
-    <dimen name="bottom_navigation_notification_radius">4dp</dimen>
-    <dimen name="bottom_navigation_notification_elevation">1dp</dimen>
-    <dimen name="bottom_navigation_notification_padding">3dp</dimen>
-    <dimen name="bottom_navigation_notification_margin_top_classic">4dp</dimen>
-    <dimen name="bottom_navigation_notification_margin_left">16dp</dimen>
-    <dimen name="bottom_navigation_notification_margin_left_active">16dp</dimen>
-    <dimen name="bottom_navigation_notification_margin_top">14dp</dimen>
-    <dimen name="bottom_navigation_notification_margin_top_active">3dp</dimen>
-    <dimen name="bottom_navigation_notification_text_size">4sp</dimen>
+    <!-- inverted progress bar -->
 
     <dimen name="text_size_default">14sp</dimen>
 </resources>
