--- a/app/src/main/res/layout/frag_wallet_cards.xml
+++ b/app/src/main/res/layout/frag_wallet_cards.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout style="@style/StandardLinearLayout"
+<LinearLayout
+    style="@style/StandardLinearLayout"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -32,7 +33,7 @@
                 android:layout_toStartOf="@id/offlineIndicator"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="6dp"
-                android:text="&#9825; Rate us"
+                android:text="&#9825; RATE US"
                 android:id="@+id/rateTeaser"
                 android:visibility="gone"/>
 
