Fix text alignment

--- a/app/src/main/res/layout/activity_qr_chain_addresses.xml
+++ b/app/src/main/res/layout/activity_qr_chain_addresses.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:textAlignment="center"
+        android:gravity="center"
         android:layout_marginTop="40dp"
         android:id="@+id/chainQrCaption"
         android:layout_alignParentTop="true"
