--- a/app/src/main/res/layout/activity_qr_lightning_invoice.xml
+++ b/app/src/main/res/layout/activity_qr_lightning_invoice.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activityQRInvoiceMain">
 
     <TextView
-        android:textAlignment="center"
+        android:gravity="center"
         android:layout_marginTop="40dp"
         android:id="@+id/invoiceQrCaption"
         android:layout_alignParentTop="true"
