--- a/app/src/main/res/layout/activity_qr_split_invoice.xml
+++ b/app/src/main/res/layout/activity_qr_split_invoice.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:maxLines="1"
-        android:textAlignment="center"
+        android:gravity="center"
         android:layout_marginTop="40dp"
         android:id="@+id/splitQrCaption"
         android:layout_alignParentTop="true"
