--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
 
     <color name="cardLightning">#4F5B8F</color>
     <color name="cardBitcoinModern">#876319</color>
-    <color name="cardBitcoinLegacy">#555555</color>
+    <color name="cardBitcoinLegacy">#5A5A5A</color>
     <color name="cardFiatUsd">#66937f</color>>
     <color name="cardFiatEur">#806993</color>
 
