--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="paymentAwait">#E08f04</color>
     <color name="paymentDone">#99CC00</color>
+    <color name="colorGreen">#99CC00</color>
 
     <color name="lnLogo">#6EABFA</color>
     <color name="btcLogo">#E08f04</color>
@@ -18,7 +19,7 @@
     <color name="cardLightning">#4F5B8F</color>
     <color name="cardBitcoinModern">#876319</color>
     <color name="cardBitcoinLegacy">#5A5A5A</color>
-    <color name="cardFiatUsd">#66937f</color>>
+    <color name="cardFiatUsd">#66937f</color>
     <color name="cardFiatEur">#806993</color>
 
     <color name="buttonGreenRipple">#8BD670</color>
